test/inference/good/coreml_record_define.mlt
type t = { x : int; y : int }
let x = { x = 0; y = 0 }
