test/inference/bad/coreml_multiple_labels.mlt
type 'a t = { x : 'a }
let (y : int t) = { x = 0; x = 42 }[int]
